[package]
name = "tls_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-std", "io-util", "macros"] }
openssl = "0.10"
openssl-sys = "0.9"
tokio-openssl = "0.6"

